<resources>
    <string name="app_name">TeachNook Todo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="teachnook_todo">TeachNook Todo</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="delete_todo">Delete ToDo</string>
    <string name="edit_todo">Edit ToDo</string>
    <string name="add_task_button">Add Task</string>
    <string name="edit_task">Edit Task</string>
    <string name="already_have_an_account">Already have an account!!</string>
    <string name="sign_in">Sign In</string>
    <string name="does_not_have_account">Does not have an account?</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="sign_up">Sign Up</string>
    <string name="add_task">Add Task</string>
    <string name="user">User</string>
    <string name="todo_app">TODO APP</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="is_completed">\n</string>
    <string name="due_date">Date</string>
    <string name="priority">Priority</string>
    <string name="category">Category</string>
    <string name="teach_to_do">Teach-to-do</string>
    <string name="registration">Registration</string>
</resources>