<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:layout_marginTop="15dp"
    android:layout_marginHorizontal="15dp">

    <TextView
        android:id="@+id/todo_item_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:maxLines="1"
        android:layout_marginEnd="16dp"
        android:text="@string/title"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/ib_edit"
        app:layout_constraintStart_toEndOf="@+id/todo_item_is_completed"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/todo_item_desc"
        android:textColor="@color/black"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:maxLines="1"
        android:layout_marginEnd="16dp"
        android:text="@string/description"
        app:layout_constraintEnd_toStartOf="@+id/ib_edit"
        app:layout_constraintStart_toEndOf="@+id/todo_item_is_completed"
        app:layout_constraintTop_toBottomOf="@+id/todo_item_title" />

    <TextView
        android:id="@+id/todo_item_due_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/due_date"
        app:layout_constraintEnd_toStartOf="@+id/todo_item_category"
        app:layout_constraintHorizontal_bias="0.32"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/todo_item_desc" />

    <CheckBox
        android:id="@+id/todo_item_is_completed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/ib_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:background="@null"
        android:contentDescription="@string/edit_todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ib_delete"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/edit_icon"
        app:tint="@color/black" />

    <ImageButton
        android:id="@+id/ib_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:contentDescription="@string/delete_todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/remove_icon"
        app:tint="@color/black" />

    <TextView
        android:id="@+id/todo_item_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/category"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/todo_item_desc"
        app:layout_constraintStart_toStartOf="@+id/todo_item_desc"
        app:layout_constraintTop_toBottomOf="@+id/todo_item_desc" />

    <TextView
        android:id="@+id/todo_item_priority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/priority"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/ib_edit"
        app:layout_constraintStart_toEndOf="@+id/todo_item_category"
        app:layout_constraintTop_toBottomOf="@+id/todo_item_desc" />

</androidx.constraintlayout.widget.ConstraintLayout>
